# uni-ocr-cli

./: .gitignore  README.md  pyproject.toml  universal_id_prompt.txt
uni_ocr/: cli.py
